--- a/index.html
+++ b/index.html
@@ -7,18 +7,42 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f7f7f7;
         }
-        .countdown {
-            font-size: 40px;
-            font-weight: bold;
-            margin-top: 20px;
+        h1, h2 {
+            text-align: center;
+            margin: 10px;
+        }
+        #countdown {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+        #todoSection {
+            width: 90%;
+            max-width: 400px;
+            background-color: #fff;
             padding: 20px;
-            background-color: #333;
-            color: white;
-            border-radius: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        #todoList {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #todoList li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        #todoList li:last-child {
+            border-bottom: none;
         }
     </style>
 </head>
@@ -26,34 +50,59 @@
     <h1 id="title">¡NOS MUDAMOS EL! <span id="targetDateDisplay"></span></h1>
     <div id="countdown" class="countdown">Cargando...</div>
 
+    <h2>Lista de pendientes</h2>
+    <ul id="todoList"></ul>
+
     <script>
-        // Fecha objetivo: 27 de febrero de 2025 a las 00:00
+        // Fecha objetivo
         const targetDate = new Date("Feb 27, 2025 00:00:00");
         const targetDateFormatted = targetDate.toLocaleDateString("es-ES", { year: 'numeric', month: 'long', day: 'numeric' });
 
+        // Mostrar la fecha objetivo en el encabezado
+        document.getElementById("targetDateDisplay").textContent = targetDateFormatted;
+
         // Función para actualizar la cuenta regresiva
         const countdownFunction = setInterval(function() {
-            // Fecha actual
             const now = new Date().getTime();
+            const distance = targetDate.getTime() - now;
 
-            // Diferencia entre la fecha objetivo y la actual
-            const distance = targetDate - now;
-
-            // Cálculo de días, horas, minutos y segundos
             const days = Math.floor(distance / (1000 * 60 * 60 * 24));
             const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const minutes = Math.floor((distance % (1000 * 60)) / (1000 * 60));
             const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Mostrar el resultado en el elemento con id="countdown"
             document.getElementById("countdown").innerHTML = `${days} días, ${hours} horas, ${minutes} minutos, ${seconds} segundos`;
 
-            // Si la cuenta regresiva ha terminado
             if (distance < 0) {
                 clearInterval(countdownFunction);
                 document.getElementById("countdown").innerHTML = "¡Ha llegado el día!";
             }
         }, 1000);
+
+        // Cargar la lista de pendientes desde un archivo de texto
+        const todoList = document.getElementById("todoList");
+
+        fetch('pendientes.txt')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`Error al cargar el archivo: ${response.statusText}`);
+                }
+                return response.text();
+            })
+            .then(data => {
+                const todoItems = data.split('\n').filter(item => item.trim() !== ''); // Dividir por líneas y eliminar vacías
+                todoItems.forEach(item => {
+                    const listItem = document.createElement("li");
+                    listItem.textContent = item.trim();
+                    todoList.appendChild(listItem);
+                });
+            })
+            .catch(error => {
+                console.error(error);
+                todoList.innerHTML = "<li>Error al cargar la lista de pendientes.</li>";
+            });
     </script>
 </body>
+
+
 </html>
