--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1 id="title">¡NOS MUDAMOS EL! <span id="targetDateDisplay"></span></h1>
+    <h1 id="title">NOS MUDAMOS EL <span id="targetDateDisplay"></span></h1>
     <div id="countdown" class="countdown">Cargando...</div>
 
     <h2>Lista de pendientes</h2>
@@ -55,7 +55,7 @@
 
     <script>
         // Fecha objetivo
-        const targetDate = new Date("Feb 27, 2025 00:00:00");
+        const targetDate = new Date("Feb 20, 2025 00:00:00");
         const targetDateFormatted = targetDate.toLocaleDateString("es-ES", { year: 'numeric', month: 'long', day: 'numeric' });
 
         // Mostrar la fecha objetivo en el encabezado
