--- a/index.html
+++ b/index.html
@@ -32,26 +32,32 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        #todoList {
+        #todoList, #novList {
             list-style: none;
             padding: 0;
             margin: 0;
         }
-        #todoList li {
+        #todoList li, #novList li {
             padding: 10px;
             border-bottom: 1px solid #ddd;
         }
         #todoList li:last-child {
             border-bottom: none;
         }
+        #novList li:last-child {
+            border-bottom: none;
+        }
     </style>
 </head>
 <body>
-    <h1 id="title">NOS MUDAMOS EL <span id="targetDateDisplay"></span></h1>
+    <h1 id="title">¡NOS MUDAMOS EL! <span id="targetDateDisplay"></span></h1>
     <div id="countdown" class="countdown">Cargando...</div>
 
     <h2>Lista de pendientes</h2>
     <ul id="todoList"></ul>
+
+    <h2>Novedades</h2>
+    <ul id="novList"></ul>
 
     <script>
         // Fecha objetivo
@@ -101,6 +107,29 @@
                 console.error(error);
                 todoList.innerHTML = "<li>Error al cargar la lista de pendientes.</li>";
             });
+
+        const novList = document.getElementById("novList");
+
+        fetch('novedades.txt')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`Error al cargar el archivo: ${response.statusText}`);
+                }
+                return response.text();
+            })
+            .then(data => {
+                const novItems = data.split('\n').filter(item => item.trim() !== ''); // Dividir por líneas y eliminar vacías
+                novItems.forEach(item => {
+                    const novItem = document.createElement("li");
+                    novItem.textContent = item.trim();
+                    novList.appendChild(novItem);
+                });
+            })
+            .catch(error => {
+                console.error(error);
+                novList.innerHTML = "<li>Error al cargar la lista de novedades.</li>";
+            });
+        
     </script>
 </body>
 
