--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Edgecut</title>
+  <title>MUDANZA MENDOCINA</title>
 
 
   <!-- bootstrap core css -->
