--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Edgecut</title>
+  <title>Mudanza Mendocina</title>
 
 
   <!-- bootstrap core css -->
